# voice-chat

./: README.md  deploy-docker.sh  run-all.sh
ai-agent/: Dockerfile  README.md  deploy_image.sh  docker-compose.yml  langgraph.json  pyproject.toml  test_imports.py
ai-agent/src/agent/: __init__.py  containers.py  run_execution.py  run_graph.py  test_input_type.py
ai-agent/src/agent/bash_client/: client.py
ai-agent/src/agent/core/: __init__.py  agent.py  ai_models.py  chat_graph.py  chat_graph_state.py  configs.py  graph.py  state.py
ai-agent/src/agent/models/: __init__.py  models.py  schemas.py  step_models.py  task_models.py
ai-agent/src/agent/prompts/: __init__.py  chat_grap_prompts.py  prompts.py
ai-agent/src/agent/services/: fernet_service.py
ai-agent/src/agent/tools/: __init__.py  audio_utils.py  file_utils.py  kokoroko_utils.py  llm_tools.py  utils.py
ai-agent/src/agent/utils/: get_models.py  git_tools.py
ai-agent/test/comment_test/: sample.py
ai-agent/test/comment_test_backup/: sample.py
ai-agent/tests/unit_tests/: test_configuration.py
backend/: Dockerfile  add_username_migration.sql  docker-compose.yml  init_db.sql  pyproject.toml
backend/src/accounting_agent/: container.py  main.py
backend/src/accounting_agent/api/routes/: auth.py  chat.py  code.py  default_ai_models.py  files.py  model_api.py  openrouter_models.py  webhook.py
backend/src/accounting_agent/auth/services/: password.py  user.py
backend/src/accounting_agent/databases/: mongo_db.py  postgres_db.py
backend/src/accounting_agent/examples/: postgres_usage_example.py
backend/src/accounting_agent/models/: __init__.py  ai_model.py  chat.py  code.py  defaul_ai_model.py  file.py  model_api.py  thread.py  user.py
backend/src/accounting_agent/services/: ai_model_service.py  chat.py  default_ai_model_service.py  model_api_service.py
backend/src/accounting_agent/utils/: csv.py  delete_messages_test.py  file_processor.py  file_utils.py  list_models.py  lol.csv  lol.json  test.py  test_file_utils.py  test_thread_creation.py
frontend/: Dockerfile  docker-compose.yml  entrypoint.sh  env.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: config.js
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/components/: AIModelsSettings.css  AIModelsSettings.tsx  AudioPlayer.tsx  AuthModal.css  ChatHeader.tsx  ChatSidebar.css  ChatSidebar.tsx  ChatView.css  ChatView.tsx  DashboardLayout.css  DashboardLayout.tsx  DefaultModelsModal.css  DefaultModelsModal.tsx  InputArea.css  InputArea.tsx  LoginModal.tsx  MessageToggle.css  MessageToggle.tsx  MessagesContainer.tsx  ModelApiModal.css  ModelApiModal.tsx  ProtectedRoute.tsx  RegisterModal.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dropdown-menu.tsx  input.tsx
frontend/src/contexts/: ApiKeyContext.tsx  AuthContext.tsx
frontend/src/lib/: api.ts  authService.ts  chatsService.ts  codesService.ts  defaultAIModelsService.ts  filesService.ts  modelApiService.ts  openrouterModelsService.ts  webhookService.ts
frontend/src/pages/: Chat.tsx  CodesView.tsx  DefaultModels.css  DefaultModels.tsx  FileUpload.css  FileUploadDashboard.tsx  Login.tsx  ModelApiSettings.css  ModelApiSettings.tsx  Register.tsx
frontend/src/types/: global.d.ts
